--- a/project_frontend/public/index.html
+++ b/project_frontend/public/index.html
@@ -21,6 +21,7 @@
 
 <link rel="stylesheet" href="./Asserts/css/styles.css" />
 <script src="./Asserts/scripts/script.js"></script>
+<link rel="stylesheet" href="./NT_Asserts/style/style.css" />
 
     <title>React App</title>
   </head>
